voting-app-demo/manifests/dev-in-prod-demo.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis-prod
    version: v1
  name: redis-prod
  namespace: voting-app
spec:
  ports:
    - name: tcp-redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis-prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-prod
    version: v1
  name: redis-prod-v1
  namespace: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-prod
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: redis-prod
        version: v1
    spec:
      containers:
        - name: redis-prod
          image: bitnami/redis:6.0.8
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 6379
              name: redis

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: voting-app-ui
  name: voting-app-ui
  namespace: voting-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: voting-app-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: voting-app-ui
    version: v1
  name: voting-app-ui-v1
  namespace: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-app-ui
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: voting-app-ui
        version: v1
    spec:
      containers:
        - name: azure-vote-front
          image: voting-app-ui
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: voting-app
  namespace: voting-app
  labels:
    app: voting-app
    version: v1
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "voting-app.localhost"
        - "dev.voting-app.localhost"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: voting-app-ui
  namespace: voting-app
spec:
  hosts:
    - "voting-app.localhost"
  gateways:
    - voting-app
  http:
    - route:
        - destination:
            host: voting-app-ui
            subset: v1
          weight: 100
      mirror:
        host: voting-app-ui
        subset: v2
      mirrorPercentage:
        value: 10.

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    type: dev
  name: voting-app-ui-v2
  namespace: voting-app
spec:
  hosts:
    - "dev.voting-app.localhost"
  gateways:
    - voting-app
  http:
    - route:
        - destination:
            host: voting-app-ui
            subset: v2
          weight: 100

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  labels:
    type: dev
  name: voting-app-ui
  namespace: voting-app
spec:
  host: voting-app-ui
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: redis-prod
  namespace: voting-app
spec:
  hosts:
    - redis-prod
  tcp:
    - match:
        - port: 6379
      route:
        - destination:
            host: redis-prod
            port:
              number: 6379
          weight: 100

---
apiVersion: v1
kind: Service
metadata:
  labels:
    type: dev
    app: kardinal-db-sidecar
    version: v1
  name: kardinal-db-sidecar
  namespace: voting-app
spec:
  ports:
    - name: tcp-redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: kardinal-db-sidecar
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kardinal-db-sidecar
  labels:
    type: dev
    app: kardinal-db-sidecar
    version: v1
  namespace: voting-app
spec:
  selector:
    matchLabels:
      app: kardinal-db-sidecar
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: kardinal-db-sidecar
        version: v1
    spec:
      containers:
        - name: proxy
          image: kurtosistech/redis-proxy-overlay:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
          readinessProbe:
            periodSeconds: 5
            tcpSocket:
              port: 6379
          livenessProbe:
            periodSeconds: 5
            tcpSocket:
              port: 6379
          volumeMounts:
            - mountPath: /data
              name: proxy-data
          resources:
            limits:
              memory: 256Mi
              cpu: 125m
            requests:
              cpu: 70m
              memory: 200Mi
      volumes:
        - name: proxy-data
          emptyDir: {}
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    type: dev
  name: kardinal-db-sidecar
  namespace: voting-app
spec:
  hosts:
    - kardinal-db-sidecar
  tcp:
    - match:
        - port: 6379
      route:
        - destination:
            host: kardinal-db-sidecar
            port:
              number: 6379
          weight: 100

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: voting-app-ui
    version: v2
    type: dev
  name: voting-app-ui-v2
  namespace: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-app-ui
      version: v2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: voting-app-ui
        version: v2
    spec:
      containers:
        - name: azure-vote-front
          image: voting-app-ui-v2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
